syntax = "proto3";

option csharp_namespace = "BchainSimServices";

package BchainSimServices;

service Log {
    rpc Write(LogMessage) returns (EmptyLogResponse);
}

message EmptyLogResponse {
}

message LogMessage {
    int32 logLevel = 1;
    int64 timestamp = 2;
    string minerId = 3;
    string tag = 4;
    string message = 5;
}